# qi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN2.md  DESIGN3.md  README.md  ascii_param_test.qi  basic_comment.qi  basic_test.qi  block_comment_test.qi  boolean_expression_test.qi  build.rs  compile_and_run.sh  hello_world  hello_world.qi  hello_world_complete  hello_world_final  hello_world_final_auto  hello_world_fixed  hello_world_fixed_auto  hello_world_test  ports.json  test_chinese  test_chinese_c  test_utf8_output
.github/workflows/: ci.yml
examples/: 01_hello_world_exec  README.md  comprehensive_demo  hello_world.qi  hello_world_fixed_new  test_simple
examples/runtime/: 数学运算测试
runtime/: CMakeLists.txt
runtime/include/: qi_errors.h  qi_memory.h  qi_runtime.h  qi_strings.h
runtime/src/: errors.c  memory.c  platform.c  strings.c
specs/001-qi-language-compiler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qi-language-compiler/checklists/: requirements.md
specs/001-qi-language-compiler/contracts/: compiler-api.yaml
src/: config.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/codegen/: builder.rs  builder.rs.bak  llvm.rs  mod.rs  optimization.rs
src/lexer/: keywords.rs  mod.rs  tokens.rs  unicode.rs
src/parser/: ast.rs  error.rs  grammar.lalrpop  mod.rs
src/runtime/: errors.rs  io.rs  memory.rs  mod.rs  strings.rs
src/semantic/: mod.rs  scope.rs  symbol_table.rs  type_checker.rs  types.rs
src/targets/: linux.rs  macos.rs  mod.rs  wasm.rs  windows.rs
src/utils/: cache.rs  diagnostics.rs  mod.rs  source.rs
tests/fixtures/: control_flow_comprehensive.qi
tests/fixtures/basic/: calculator.qi  hello_world.qi
tests/fixtures/control/: complex_nested.qi  for_loops.qi  if_else.qi  while_loops.qi
tests/fixtures/functions/: parameters.qi
tests/fixtures/types/: strings.qi  type_errors.qi  variables.qi
tests/integration/: control_flow_integration.rs  end_to_end.rs
tests/unit/: control_flow_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs  user_story_2_simple_tests.rs  user_story_2_tests.rs
