[package]
name = "qi-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Qi Language Team <team@qi-lang.org>"]
description = "A compiler for the Qi programming language with 100% Chinese keywords"
license = "MIT"
repository = "https://github.com/qi-lang/qi-compiler"
homepage = "https://qi-lang.org"
rust-version = "1.75"

[workspace]
members = [
    ".",
]
resolver = "2"

[[bin]]
name = "qi"
path = "src/main.rs"

[lib]
name = "qi_compiler"
path = "src/lib.rs"

[dependencies]
# LALRPOP parser generator
lalrpop-util = { version = "0.22.2", features = ["lexer"] }

# LLVM bindings for code generation (optional for now)
inkwell = { version = "0.4.0", features = ["llvm15-0"], optional = true }


# Unicode support for Chinese characters
unicode-xid = "0.2.4"

# Error reporting and diagnostics
ariadne = "0.4.0"

# Command line argument parsing
clap = { version = "4.4.0", features = ["derive"] }

# Logging and configuration
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# File handling and path management
glob = "0.3.1"
walkdir = "2.4.0"

# Performance measurement
criterion = { version = "0.5.1", optional = true }

# Testing utilities
tempfile = { version = "3.8.1", optional = true }

# Error handling
thiserror = "1.0.50"

# Global state
once_cell = "1.18.0"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Regular expressions for optimization
regex = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.8.1"

[[test]]
name = "end_to_end"
path = "tests/integration/end_to_end.rs"
required-features = ["integration-tests"]

[[test]]
name = "user_story_2_tests"
path = "tests/unit/user_story_2_tests.rs"

[[test]]
name = "user_story_2_simple_tests"
path = "tests/unit/user_story_2_simple_tests.rs"

[[test]]
name = "control_flow_tests"
path = "tests/unit/control_flow_tests.rs"

[build-dependencies]
lalrpop = "0.22.2"

[features]
default = []
benchmarks = ["criterion"]
integration-tests = ["tempfile"]
llvm = ["inkwell"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

# [[bench]]
# name = "compilation_speed"
# harness = false

# [[bench]]
# name = "memory_usage"
# harness = false

# [[bench]]
# name = "runtime_performance"
# harness = false